UPDATE switch to java 8, docker image update to prevent out of memory failures